fix footer postion on small screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -223,6 +223,7 @@ main .container-ayah {
 /* Footer Section*/
 
 footer {
+  transform: translate(0%, -50%);
   margin-top: 5rem;
 }
 
